Login, Register users with token & User DB, Seeds
