# app/Http/Controllers/api/AuthController.php
@@ -1,0 +1,132 @@
+<?php
+
+namespace App\Http\Controllers\api;
+
+use App\Http\Requests\LoginRequest;
+use App\Http\Requests\SignupRequest;
+use App\Models\User;
+use App\Notifications\WelcomeEmailNotification;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use App\Http\Controllers\Controller;
+
+class AuthController extends Controller
+{
+
+    /**
+     * @OA\Post(
+     *   path="/signup",
+     *   tags={"Register & Login"},
+     *   description="Signup",
+     *   @OA\Response(response="200",
+     *     description="User Create",
+     *   ),
+     *   @OA\RequestBody(
+     *     required=true,
+     *     @OA\JsonContent(ref="#/components/schemas/SignupRequest")
+     *   )
+     * )
+     */
+    public function signup(SignupRequest $request)
+    {
+        try {
+            $data = $request->validated();
+            $user = User::create([
+                'name' => $data['name'],
+                'email' => $data['email'],
+                'password' => bcrypt($data['password']),
+            ]);
+
+            $token = $user->createToken('main')->plainTextToken;
+
+            // Send verification email for new user
+            $user->notify(new WelcomeEmailNotification($user, $token));
+
+            return response(compact('user', 'token'));
+        } catch (\Exception $exception) {
+            return response($exception->getMessage(), 409);
+        }
+    }
+
+    /**
+     * @OA\Post(
+     *   path="/login",
+     *   operationId="authLogin",
+     *   tags={"Register & Login"},
+     * summary="User Login",
+     * description="Login User Here",
+     *     @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"email", "password"},
+     *               @OA\Property(property="email", type="email", example="user@site.com"),
+     *               @OA\Property(property="password", type="password", example="1234567890")
+     *            ),
+     *        ),
+     *    ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Login Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Login Successfully",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     * )
+     */
+    public function login(LoginRequest $request)
+    {
+        $credentials = $request->validated();
+        if (!Auth::attempt($credentials)) {
+            return response([
+                'message' => 'Provided email or password is incorrect'
+            ], 422);
+        }
+
+        $user = Auth::user();
+        $token = $user->createToken('main')->plainTextToken;
+        return response(compact('user', 'token'));
+    }
+
+    /**
+     * @OA\Post(
+     * path="/logout",
+     * summary="Logout",
+     * description="Logout user and invalidate token",
+     * operationId="authLogout",
+     * tags={"Register & Login"},
+     *   security={{"bearerAuth":{}}},
+     * @OA\Response(
+     *    response=204,
+     *    description="Success"
+     *     ),
+     * @OA\Response(
+     *    response=401,
+     *    description="Returns when user is not authenticated",
+     *    @OA\JsonContent(
+     *       @OA\Property(property="message", type="string", example="Not authorized"),
+     *    )
+     * )
+     * )
+     */
+    public function logout(Request $request)
+    {
+        $user = $request->user();
+        $user->currentAccessToken()->delete();
+        return response('', 204);
+    }
+
+
+}
